2008-10-12  Kenneth Zadeck <zadeck@naturalbridge.com>

PR middle-end/37808
	* df-scan.c (df_ref_change_reg_with_loc_1): Added test to make
	sure that ref has valid bb.
	


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@141078 138bc75d-0d04-0410-961f-82ee72b054a4